<resources>
    <string name="app_name">ParchaT</string>
    <string name="facebook_app_id">584463539405075</string>
    <string name="imgV_login_logo_contDes">Logo parchaT</string>
    <string name="eT_login_correo">Correo electrónico</string>
    <string name="eT_login_password">Contraseña</string>
    <string name="b_login_iniSesion">Iniciar Sesión</string>
    <string name="tV_login_olvPassw">¿Olvidaste la contraseña?</string>
    <string name="tV_login_noMiembro">¿Aún no eres miembro?</string>
    <string name="tV_login_registrarse">Registrate</string>
    <string name="tV_login_otroIniSesion">O puedes iniciar sesión con:</string>
    <string name="imgB_login_facebook_contDes">Botón Inicio Sesión Facebook</string>
    <string name="imgB_login_google_contDes">Botón Inicio Sesión Google</string>
    <string name="eT_Error_login_1">¡Ingresa tu e-mail por favor!</string>
    <string name="eT_Error_login_2">¡Ingresa un e-mail valido!</string>
    <string name="eT_Error_login_3">¡Ingresa tu contraseña por favor!</string>
    <string name="eT_Error_login_4">!La contraseña registrada tiene más de 10 caracteres!</string>
    <string name="msgToast_login_1">!El correo ingresado no esta registrado o es incorrecto!</string>
    <string name="msgToast_login_2">!La contraseña ingresada es incorrecta!</string>
    <string name="msgToast_login_3">¡Algo salio mal! ¡Ingresa de nuevo!</string>
    <string name="im_logo">Logo parchaT</string>
    <string name="eT_usuario_nomCom">Nombres y apellidos</string>
    <string name="eT_usuario_email">Correo Electrónico</string>
    <string name="tv_registro">Registrate</string>
    <string name="eT_usuario_contrasena">Contraseña</string>
    <string name="b_usuario_regis">Registrarse</string>
    <string name="tv_pregunta">¿Ya tienes cuenta?</string>
    <string name="tV_registro_iniSesion">Inicia sesión</string>
    <string name="tv_regisOp">O puedes registrarte con: </string>
    <string name="imgB_registro_facebook">facebook</string>
    <string name="imgB_registro_google">google</string>
    <string name="eT_Error_registro_1">¡Ingresa tu nombre completo por favor!</string>
    <string name="eT_Error_registro_2">¡Ingresa tu e-mail por favor!</string>
    <string name="eT_Error_registro_3">¡Ingresa un e-mail valido!</string>
    <string name="eT_Error_registro_4">¡Ingresa tu contraseña por favor!</string>
    <string name="eT_Error_registro_5">!La contraseña debe tener más de 10 caracteres!</string>
    <string name="eT_Error_registro_6">!Para mayor seguridad, la contraseña debe contener letras y números!</string>
    <string name="msgToast_registro_1">¡Registro completado con exito!
        </string>
    <string name="msgToast_registro_2">¡El correo ingresado ya se encuentra registrado!
        </string>
    <string name="msgToast_registro_3">¡Algo salio mal!
        \n\nIntenta registrarte de nuevo.</string>
    <string name="msgToast_registro_4">¡Algo salio mal! ¡Ingresa de nuevo!
    </string>
    <string name="msgToast_registro_5">En desarrollo....
    </string>
    <string name="imgV_passRe_logo_contDes">Logo parchaT</string>
    <string name="tV_passRe_rePassword">Recuperar contraseña</string>
    <string name="tV_passRe_ingCorreo">Ingresa el correo asociado a tu cuenta y te enviaremos un link para que cambies tu contraseña.</string>
    <string name="eT_passRe_correo">Correo electrónico</string>
    <string name="b_passRe_recuperar">Recuperar</string>
    <string name="msgToast_passRe_1">¡Revisa tu bandeja de entrada!
        \n\nTe hemos enviado un correo para que puedas restaurar tu contraseña.</string>
    <string name="msgToast_passRe_2">¡Ocurrio un error!
        \n\nVerifica que el correo ingresaste es el correcto.</string>
    <string name="imgV_SeleccionarActividad_logo_contDes">Logo parchaT</string>
    <string name="b_SeleccionarActividad_salir">Salir</string>
    <string name="tV_SeleccionarActividad_titulo">¿Que deseas buscar hoy?</string>
    <string name="tV_SeleccionarActividad_restaurantes">Restaurantes</string>
    <string name="tV_SeleccionarActividad_musica">Música</string>
    <string name="tV_SeleccionarActividad_cine">Cine</string>
    <string name="tV_SeleccionarActividad_areasVerdes">Areas Verdes</string>
    <string name="tV_SeleccionarActividad_arte">Arte</string>
    <string name="tV_SeleccionarActividad_sorpresa">Sorprendeme</string>
    <string name="b_SeleccionarActividad_continuar">Continuar</string>
    <string name="nV_Abrir_MainActivity">open</string>
    <string name="nV_Cerrar_MainActivity">close</string>
    <string name="imgV_ActivityMain_fotoUsuario_contDes">Foto de perfil del usuario</string>
    <string name="tV_ActivityMain_nomUsuario">Nombre Usuario</string>
    <string name="tV_ActivityMain_emailUsuario">Email Usuario</string>
    <string name="imgV_ActivityMain_logo_contDes">Logo parchaT</string>
    <string name="dM_MainActivity_verPerfil">Ver Perfil</string>
    <string name="dM_MainActivity_cambiarBusqueda">Cambiar Busqueda</string>
    <string name="dM_MainActivity_config">Configuración</string>
    <string name="dM_MainActivity_cerrarSesion">Cerrar Sesión</string>
    <string name="tV_bsd_main_activity_nomLugar">Nombre Sitio</string>
    <string name="tV_bsd_main_activity_direccion">Dirección</string>
    <string name="tV_bsd_main_activity_moreInfo">Ver más informacion del sitio</string>
    <string name="imgV_main_activity_lugar_contDes">Imagen Sitio</string>
    <string name="msgAlertDiag_MainActivity_1">Parece que el GPS esta desactivado, ¿Quiere habilitarlo?</string>
    <string name="msgAlertDiag_MainActivity_1_positive">Si</string>
    <string name="msgAlertDiag_MainActivity_1_negative">No</string>
    <string name="msgToast_MainActivity_1">¡Conexion fallida, vuelve a intentarlo!</string>
    <string name="msgToast_MainActivity_2">¡Permisos Concedidos!</string>
    <string name="msgToast_MainActivity_3">¡Permisos denegados!
        \n\nNo tiene permisos suficientes para acceder a la aplicación.</string>
    <string name="msgToast_MainActivity_4">¡El GPS a sido activado!</string>
    <string name="msgToast_MainActivity_5">¡El GPS a sido desactivado!</string>
    <string name="msgSnackbar_MainActivity_1">No encontramos ningun sitio cerca a ti :(
        Intenta aumentar el rango de busqueda.</string>
    <string name="msgSnackbar_MainActivity_1_irButton">Ir</string>
    <string name="msgSnackbar_MainActivity_2">
        Este permiso es necesario para recomendarte lugares cercanos a tu posición actual.</string>
    <string name="msgSnackbar_MainActivity_2_okButton">Ok</string>
    <string name="b_perfUsuario_atras">Volver</string>
    <string name="b_perfUsuario_editar">Editar</string>
    <string name="b_perfUsuario_guardar">Guardar</string>
    <string name="tV_perfUsuario_titulo">Hola, </string>
    <string name="imgV_perfUsuario_fotoUsuario_contDes">Foto de Perfil del Usuario</string>
    <string name="imgV_perfUsuario_logo_contDes">Logo parchaT</string>
    <string name="tV_perfUsuario_cambiarFoto">Cambiar mi foto</string>
    <string name="eT_perfUsuario_nomCompleto">Nombre completo</string>
    <string name="eT_perfUsuario_correo">Correo electronico</string>
    <string name="eT_perfUsuario_celular">Número de teléfono</string>
    <string name="eT_Error_perfUsuario_1">¡Ingresa tu nombre completo por favor!</string>
    <string name="eT_Error_perfUsuario_2">¡Ingresa tu número de celular por favor!</string>
    <string name="msgToast_perfUsuario_1">¡Algo salio mal!\n\n
        Tus datos no han sido encontrados, revisa tu conexión a internet y vuelve a intentarlo.</string>
    <string name="msgToast_perfUsuario_2">¡Tus datos han sido actualizados con exito!</string>
    <string name="msgToast_perfUsuario_3">¡Error! Debes activar el modo edición para guardar.</string>
    <string name="msgToast_perfUsuario_4">¡Algo salio mal!
        \n\nIntenta guardar tus datos de nuevo.</string>
    <string name="msgToast_perfUsuario_5">¡Permisos Denegados!
        \n\nNo es posible cambiar tu foto de perfil.</string>
    <string name="msgToast_perfUsuario_6">¡Algo salio mal!
        \n\nNo se pudo cambiar tu foto de perfil.</string>
    <string name="msgToast_perfUsuario_7">En desarrollo....
    \n\nIntenta subir la foto desde la galeria.</string>
    <string name="msgToast_perfUsuario_8">¡Tu foto de perfil a sido actualizada con exito!
        </string>
    <string name="msgToast_perfUsuario_9">¡Algo salio mal!
        \n\nNo se pudo guardar tu foto de perfil.</string>
    <string name="msgAlertDiag_perfUsuario_1">¿Esta seguro que quiere salir sin guardar los cambios?</string>
    <string name="msgAlertDiag_perfUsuario_1_positive">Si</string>
    <string name="msgAlertDiag_perfUsuario_1_negative">Cancelar</string>
    <string name="msgAlertDiag_perfUsuario_1_title">Volver</string>
    <string name="msgAlertDiag_perfUsuario_cambiarFoto_titulo">Seleccionar opción</string>
    <string name="msgAlertDiag_perfUsuario_cambiarFoto_1">Tomar foto</string>
    <string name="msgAlertDiag_perfUsuario_cambiarFoto_2">Elegir de la galería</string>
    <string name="msgAlertDiag_perfUsuario_cambiarFoto_3">Cancelar</string>
    <string name="b_configuraciones_atras">Volver</string>
    <string name="tV_tB_configuraciones_titulo">Configuración</string>
    <string name="tV_configuraciones_1">Modo de Búsqueda</string>
    <string name="sW_configuraciones_tipoBusqueda">Activar Búsqueda por Marcador</string>
    <string name="tV_configuraciones_2">Si se activa la busqueda por marcador no será necesario usar el GPS, de modo que podrás dar click sobre diferentes partes del mapa y encontrar nuevos lugares sin necesidad de que estes cerca a los mismos.</string>
    <string name="tV_configuraciones_3">Rango de Búsqueda</string>
    <string name="tV_configuraciones_rangoBusqueda">500 m</string>
    <string name="tV_configuraciones_4">Puedes cambiar el rango de búsqueda en metros o kilometros.</string>
    <string name="tV_configuraciones_5">Rango de Busqueda Visible en el Mapa</string>
    <string name="sW_configuraciones_activarRango">Activar Visualización de Rango de Busqueda</string>
    <string name="tV_configuraciones_6">Puedes activar o desactivar la visualización del rango de busqueda en el área del mapa en donde se esta haciendo la busqueda de lugares.</string>
    <string name="tV_configuraciones_rangoBusqueda50m">50 m</string>
    <string name="tV_configuraciones_rangoBusqueda100m">100 m</string>
    <string name="tV_configuraciones_rangoBusqueda500m">500 m</string>
    <string name="tV_configuraciones_rangoBusqueda1km">1 km</string>
    <string name="tV_configuraciones_rangoBusqueda5km">5 km</string>
    <string name="tV_configuraciones_rangoBusqueda10km">10 km</string>
    <string name="tV_configuraciones_rangoBusqueda50km">50 km</string>
    <string name="tV_configuraciones_rangoBusqueda100km">100 km</string>
    <string name="msgToast_configuraciones_1">¡El Modo de Búsqueda por GPS esta activado!</string>
    <string name="msgToast_configuraciones_2">¡El Modo de Búsqueda por Marcador esta activado!</string>
    <string name="msgToast_configuraciones_3">¡El rango de busqueda ahora es visible!</string>
    <string name="msgToast_configuraciones_4">¡El rango de busqueda ahora no es visible!</string>
    <string name="imgB_InformacionExtraSitio_atras_contDes">Atrás</string>
    <string name="tV_tB_InformacionExtraSitio_titulo">Información del Sitio</string>
    <string name="imgV_InformacionExtraSitio_fotoSitio_contDes">Foto del Lugar</string>
    <string name="tV_InformacionExtraSitio_nomSitio">Nombre del Sitio</string>
    <string name="tV_InformacionExtraSitio_tipoLugar">Categoria: </string>
    <string name="tV_InformacionExtraSitio_direccionSitio">Dirección del Sitio</string>
    <string name="tV_InformacionExtraSitio_cityCountry">Ciudad y País</string>
    <string name="tV_InformacionExtraSitio_numeroSitio">Número del Sitio</string>
</resources>