<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dM_MainActivity_verPerfil"
        android:fontFamily="sans-serif-smallcaps"
        android:icon="@drawable/ic_user_h"
        android:title="@string/dM_MainActivity_verPerfil">
    </item>
    <item
        android:id="@+id/dM_MainActivity_cambiarBusqueda"
        android:icon="@android:drawable/ic_dialog_map"
        android:fontFamily="sans-serif-smallcaps"
        android:title="@string/dM_MainActivity_cambiarBusqueda">
    </item>
    <item
        android:id="@+id/dM_MainActivity_config"
        android:icon="@drawable/ic_config"
        android:fontFamily="sans-serif-smallcaps"
        android:title="@string/dM_MainActivity_config">
    </item>
    <item
        android:id="@+id/dM_MainActivity_cerrarSesion"
        android:fontFamily="sans-serif-smallcaps"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/dM_MainActivity_cerrarSesion">
    </item>

</menu>