<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/b_perfUsuario_atras"
        android:icon="?attr/actionModeCloseDrawable"
        android:title="@string/b_perfUsuario_atras"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/b_perfUsuario_editar"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/b_perfUsuario_editar"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/b_perfUsuario_guardar"
        android:enabled="false"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/b_perfUsuario_guardar"
        app:showAsAction="always" />
</menu>