<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_fondo_login"
    android:padding="20dp"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <ImageView
                android:id="@+id/imgV_login_logo"
                android:layout_width="210dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/imgV_login_logo_contDes"
                app:srcCompat="@drawable/ic_logo_parchat"
                tools:srcCompat="@drawable/ic_logo_parchat" />


            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/style_redondeo_edittext"

                app:endIconMode="clear_text"
                app:endIconTint="#9E434040"
                app:hintTextColor="#B0040404"
                app:startIconDrawable="@android:drawable/ic_dialog_email"
                app:startIconTint="#A19D9D">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eT_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:background="@drawable/style_redondeo_edittext"
                    android:hint="@string/eT_login_correo"
                    app:boxStrokeColor="#ABFFFFFF"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@drawable/style_black_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/style_redondeo_edittext"

                app:endIconMode="password_toggle"
                app:endIconTint="#FFFFFF"
                app:hintTextColor="#B0000000"
                app:startIconDrawable="@android:drawable/ic_lock_lock"
                app:startIconTint="#A19D9D">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eT_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:hint="@string/eT_login_password"
                    android:background="@drawable/style_redondeo_edittext"
                    app:boxStrokeColor="#ABFFFFFF"
                    android:inputType="textPassword"
                    android:textColor="#AB000000"
                    android:textColorLink="#E91E63"
                    android:textCursorDrawable="@drawable/style_black_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/b_login_iniSesion"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_redondeo_button"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/b_login_iniSesion"
                app:backgroundTint="#FF5328" />

            <TextView
                android:id="@+id/tV_login_olvPassw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center_horizontal"
                android:text="@string/tV_login_olvPassw"
                android:textColor="#9EE6D5D5" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tV_login_noMiembro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center_horizontal"
                    android:text="@string/tV_login_noMiembro"
                    android:textColor="#9EE6D5D5" />

                <TextView
                    android:id="@+id/tV_login_registrarse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center_horizontal"
                    android:text="@string/tV_login_registrarse"
                    android:textColor="#FBFBFB" />
            </LinearLayout>

            <TextView
                android:id="@+id/tV_login_otroIniSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center_horizontal"
                android:text="@string/tV_login_otroIniSesion"
                android:textColor="#FFFFFF" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imgB_login_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="11dp"
                    android:layout_marginRight="11dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/imgB_login_facebook_contDes"
                    app:srcCompat="@drawable/ic_logo_facebook"
                    tools:srcCompat="@drawable/ic_logo_facebook" />

                <ImageButton
                    android:id="@+id/imgB_login_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginLeft="11dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/imgB_login_google_contDes"
                    app:srcCompat="@drawable/ic_logo_google"
                    tools:srcCompat="@drawable/ic_logo_google" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>