<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#FF5328"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgV_ActivityMain_fotoUsuario"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/imgV_ActivityMain_fotoUsuario_contDes"
            android:src="@drawable/ic_mi_imagen" />

        <TextView
            android:id="@+id/tV_ActivityMain_nomUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-smallcaps"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/tV_ActivityMain_nomUsuario"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tV_ActivityMain_emailUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:fontFamily="sans-serif-smallcaps"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/tV_ActivityMain_emailUsuario"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>