<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_fondo_passwordrecovery"
    tools:context=".view.recuperar_password.RecuperarPassword"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="210dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/imgV_passRe_logo_contDes"
                app:srcCompat="@drawable/ic_logo_parchat"
                tools:srcCompat="@drawable/ic_logo_parchat" />

            <TextView
                android:id="@+id/tV_passRe_rePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/tV_passRe_rePassword"
                android:textColor="@color/blue_darky"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tV_passRe_ingCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/tV_passRe_ingCorreo"
                android:textColor="@color/grey_light"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/style_redondeo_edittext"
                app:boxStrokeColor="#ABFFFFFF"
                app:endIconMode="clear_text"
                app:endIconTint="#9EE6D5D5"
                app:hintTextColor="#B0040404"
                app:startIconDrawable="@android:drawable/ic_dialog_email"
                app:startIconTint="#A19D9D">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eT_passRe_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:background="@drawable/style_redondeo_edittext"
                    android:hint="@string/eT_passRe_correo"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@drawable/style_black_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/b_passRe_recuperar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_redondeo_button"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/b_passRe_recuperar"
                app:backgroundTint="#FF5328" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>