<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="#233140">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/imgB_perfUsuario_volver"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:contentDescription="@string/b_perfUsuario_atras"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/actionModeCloseDrawable"
            app:tint="#FFFFFF"
            tools:srcCompat="?attr/actionModeCloseDrawable" />

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/imgB_perfUsuario_editar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/b_perfUsuario_editar"
                app:srcCompat="@android:drawable/ic_menu_edit"
                tools:srcCompat="@android:drawable/ic_menu_edit" />

            <ImageButton
                android:id="@+id/imgB_perfUsuario_guardar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/b_perfUsuario_guardar"
                app:srcCompat="@android:drawable/ic_menu_save"
                tools:srcCompat="@android:drawable/ic_menu_save"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>